changes made for making the page responsive

--- a/login_page/index.html
+++ b/login_page/index.html
@@ -37,8 +37,10 @@
         </div>
         <div class="my-form__actions">
             <div class="my-form__row">
-                <span><p>Don't have an account?</p></span>
-                <a href="#">Sign Up</a>
+                <span>
+                    Don't have an account?
+                    <a href="#">Sign Up</a>
+                </span>
             </div>
         </div>
     </form>
