changes made for making page responsive

--- a/signup_page/index.html
+++ b/signup_page/index.html
@@ -41,8 +41,10 @@
         </div>
         <div class="my-form__actions">
             <div class="my-form__row">
-                <span><p>Already a member?</p></span>
-                <a href="#">Sign in here</a>
+                <span>
+                    Already a member?
+                    <a href="#">Sign in here</a>
+                </span>
             </div>
         </div>
     </form>
