made mobile responsiveness efficient

--- a/Contact_Page/index.html
+++ b/Contact_Page/index.html
@@ -17,7 +17,8 @@
                     <p class="subhead">
                         Have questions or need help? Contact us! Our support team is here to assist you.
                         Reach us via email at support@EliteMart01.com or call +123-456-7890. <br>
-                        Visit us at 456 Market Street, New Delhi. <br> We aim to respond within 24 hours.
+                        Visit us at 456 Market Street, New Delhi.
+                         <!-- <br> We aim to respond within 24 hours. -->
                     </p>
                 </div>
                 <div class="responsive-cell-block wk-ipadp-6 wk-mobile-12 wk-desk-5 wk-tab-9" id="i6df">
