--- a/index.html
+++ b/index.html
@@ -1,11 +1,159 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elite Mart - Home Page</title>
-</head>
-<body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>EliteMart</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="style.css" rel="stylesheet">
+  </head>
+  <body>
+
+    <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+      <symbol id="search" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
+        <title>Search</title>
+        <path fill="currentColor" d="M19 3C13.488 3 9 7.488 9 13c0 2.395.84 4.59 2.25 6.313L3.281 27.28l1.439 1.44l7.968-7.969A9.922 9.922 0 0 0 19 23c5.512 0 10-4.488 10-10S24.512 3 19 3zm0 2c4.43 0 8 3.57 8 8s-3.57 8-8 8s-8-3.57-8-8s3.57-8 8-8z" />
+      </symbol>
+      <symbol xmlns="http://www.w3.org/2000/svg" id="user" viewBox="0 0 16 16">
+        <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" />
+      </symbol>
+      <symbol xmlns="http://www.w3.org/2000/svg" id="cart" viewBox="0 0 16 16">
+        <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+      </symbol>
+    </svg>
+
+    <header id="header" class="site-header header-scrolled position-fixed text-black bg-light">
+      <nav id="header-nav" class="navbar navbar-expand-lg px-3 mb-3">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">
+            <img src="assets/shop.svg" class="logo" alt="logo">
+          </a>
+          <div class="offcanvas offcanvas-end" tabindex="-1" id="bdNavbar" aria-labelledby="bdNavbarOffcanvasLabel">
+            <div class="offcanvas-body">
+              <ul id="navbar" class="navbar-nav text-uppercase justify-content-end align-items-center flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <a class="nav-link me-4 active" href="#billboard">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link me-4" href="#company-services">Services</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link me-4" href="#mobile-products">Products</a>
+                </li>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link me-4 dropdown-toggle link-dark" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Pages</a>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a href="about.html" class="dropdown-item">About</a>
+                    </li>
+                    <li>
+                      <a href="shop.html" class="dropdown-item">Shop</a>
+                    </li>
+                    <li>
+                      <a href="cart.html" class="dropdown-item">Cart</a>
+                    </li>
+                    <li>
+                      <a href="checkout.html" class="dropdown-item">Checkout</a>
+                    </li>
+                    <li>
+                      <a href="contact.html" class="dropdown-item">Contact</a>
+                    </li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <div class="user-items ps-5">
+                    <ul class="d-flex justify-content-end list-unstyled">
+                      <li class="search-item pe-3">
+                        <a href="#" class="search-button">
+                          <svg class="search">
+                            <use xlink:href="#search"></use>
+                          </svg>
+                        </a>
+                      </li>
+                      <li class="pe-3">
+                        <a href="#">
+                          <svg class="user">
+                            <use xlink:href="#user"></use>
+                          </svg>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="cart.html">
+                          <svg class="cart">
+                            <use xlink:href="#cart"></use>
+                          </svg>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
     
-</body>
+      <div class="container">
+        <div class="main-image"></div>
+        <div class="heading">PUMA SPOTLIGHT</div>
+        <div class="all-products">
+          <div class="all-product">
+              <div class="product">
+                  <div class="box-img" style="background-image: url('assets/Sneakers 7.avif');"></div>
+                  <div class="product-info">
+                      <h5 class="product-title">PUMA-180 Unisex Sneakers</h5>
+                      <p class="product-price">$320</p>
+                      <a class="product-btn" href="#">Buy Now</a>
+                  </div>
+              </div> 
+              <div class="product">
+                  <div class="box-img" style="background-image: url('assets/Sneakers 2.avif');"></div>
+                  <div class="product-info">
+                      <h5 class="product-title">Rider Future Vintage Unisex Sneakers</h5>
+                      <p class="product-price">$3530</p>
+                      <a class="product-btn" href="#">Buy Now</a>
+                  </div>
+              </div>
+              <div class="product">
+                  <div class="box-img" style="background-image: url('assets/Sneakers\ 6.avif');"></div>
+                  <div class="product-info">
+                      <h5 class="product-title">Porsche Legacy Caven 2.0 Unisex Motorsport Sneakers</h5>
+                      <p class="product-price">$419</p>
+                      <a class="product-btn" href="#">Buy Now</a>
+                  </div>
+              </div>
+          </div>
+          <div class="all-product">
+              <div class="product">
+                  <div class="box-img" style="background-image: url('assets/Sneakers 6.avif');"></div>
+                  <div class="product-info">
+                      <h5 class="product-title">Cricket square Men's Shoes</h5>
+                      <p class="product-price">$270</p>
+                      <a class="product-btn" href="#">Buy Now</a>
+                  </div>  
+              </div> 
+              <div class="product">
+                  <div class="box-img" style="background-image: url('assets/Sneakers 5.avif');"></div>
+                  <div class="product-info">
+                      <h5 class="product-title">Exotek NITRO Energy Unisex Sneakers</h5>
+                      <p class="product-price">$1030</p>
+                      <a class="product-btn" href="#">Buy Now</a>
+                  </div>
+              </div>
+              <div class="product">
+                  <div class="box-img" style="background-image: url('assets/Sneakers 4.avif');"></div>
+                  <div class="product-info">
+                      <h5 class="product-title">RS-X Forward History Unisex Sneakers</h5>
+                      <p class="product-price">$729</p>
+                      <a class="product-btn" href="#">Buy Now</a>
+                  </div>
+              </div>
+          </div>
+        </div>
+      </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
 </html>
