--- a/main.html
+++ b/main.html
@@ -45,10 +45,7 @@
                   <a class="nav-link me-4 dropdown-toggle link-dark" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Pages</a>
                   <ul class="dropdown-menu">
                     <li>
-                      <a href="about.html" class="dropdown-item">About</a>
-                    </li>
-                    <li>
-                      <a href="shop.html" class="dropdown-item">Shop</a>
+                      <a href="wishlist page/index.html" class="dropdown-item">Wishlist</a>
                     </li>
                     <li>
                       <a href="cart.html" class="dropdown-item">Cart</a>
@@ -57,7 +54,7 @@
                       <a href="checkout.html" class="dropdown-item">Checkout</a>
                     </li>
                     <li>
-                      <a href="contact.html" class="dropdown-item">Contact</a>
+                      <a href="contact page/index.html" class="dropdown-item">Contact</a>
                     </li>
                   </ul>
                 </li>
@@ -72,7 +69,7 @@
                         </a>
                       </li>
                       <li class="pe-3">
-                        <a href="#">
+                        <a href="login_page/index.html">
                           <svg class="user">
                             <use xlink:href="#user"></use>
                           </svg>
