--- a/wishlist page/index.html
+++ b/wishlist page/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <p class="logo">PUMA</p>
+        <p class="logo">Wishlist</p>
         <div class="cart"><i class="fa-solid fa-cart-shopping"></i><p id="count">0</p></div>
     </div>
     <div class="container">
