more pages added

--- a/main.html
+++ b/main.html
@@ -62,7 +62,7 @@
                         </a>
                       </li>
                       <li>
-                        <a href="cart.html">
+                        <a href="cart page/index.html">
                           <svg class="cart">
                             <use xlink:href="#cart"></use>
                           </svg>
