Made some changes to beautify the site

--- a/wishlist page/index.html
+++ b/wishlist page/index.html
@@ -19,7 +19,7 @@
             <div id="cartitem">Your Cart is Empty</div>
             <div class="foot">
                 <h3>Total</h3>
-                <h2 id="total">₹0.00</h2>
+                <h2 id="total">$0.00</h2>
             </div>
         </div>
     </div>
