--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>EliteMart</title>
+    <link rel="icon" type="image/svg+xml" href="assets/shop.svg" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -35,9 +36,6 @@
               <ul id="navbar" class="navbar-nav text-uppercase justify-content-end align-items-center flex-grow-1 pe-3">
                 <li class="nav-item">
                   <a class="nav-link me-4 active" href="#billboard">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link me-4" href="#mobile-products">Products</a>
                 </li>
                 <li class="nav-item"> 
                   <a class="nav-link me-4" href="contact page/index.html">Contact</a>
@@ -79,11 +77,13 @@
         </div>
       </nav>
     </header>
-    
+  
+
     <!-- Main Content -->
       <div class="container">
         <div class="main-image"></div>
-        <div class="heading">SPOTLIGHT</div>
+        <hr style="color: black; margin-top: 40px;">
+        <div class="heading" style="color: crimson; font-family:'Courier New', Courier, monospace; text-decoration :underline;">SPOTLIGHT</div>
         <div class="all-products">
           <div class="all-product">
               <div class="product">
@@ -91,7 +91,7 @@
                   <div class="product-info">
                       <h5 class="product-title">PUMA-180 Unisex Sneakers</h5>
                       <p class="product-price">$320</p>
-                      <a class="product-btn" href="#">Buy Now</a>
+                      <a class="product-btn" href="cart page/index.html">Buy Now</a>
                   </div>
               </div> 
               <div class="product">
@@ -99,15 +99,15 @@
                   <div class="product-info">
                       <h5 class="product-title">Rider Future Vintage Unisex Sneakers</h5>
                       <p class="product-price">$3530</p>
-                      <a class="product-btn" href="#">Buy Now</a>
+                      <a class="product-btn" href="cart page/index.html">Buy Now</a>
                   </div>
               </div>
               <div class="product">
                   <div class="box-img" style="background-image: url('assets/Sneakers\ 6.avif');"></div>
                   <div class="product-info">
-                      <h5 class="product-title">Porsche Legacy Caven 2.0 Unisex Motorsport Sneakers</h5>
+                      <h5 class="product-title">Porsche Legacy Caven 2.0</h5>
                       <p class="product-price">$419</p>
-                      <a class="product-btn" href="#">Buy Now</a>
+                      <a class="product-btn" href="cart page/index.html">Buy Now</a>
                   </div>
               </div>
           </div>
@@ -117,7 +117,7 @@
                   <div class="product-info">
                       <h5 class="product-title">Cricket square Men's Shoes</h5>
                       <p class="product-price">$270</p>
-                      <a class="product-btn" href="#">Buy Now</a>
+                      <a class="product-btn" href="cart page/index.html">Buy Now</a>
                   </div>  
               </div> 
               <div class="product">
@@ -125,7 +125,7 @@
                   <div class="product-info">
                       <h5 class="product-title">Exotek NITRO Energy Unisex Sneakers</h5>
                       <p class="product-price">$1030</p>
-                      <a class="product-btn" href="#">Buy Now</a>
+                      <a class="product-btn" href="cart page/index.html">Buy Now</a>
                   </div>
               </div>
               <div class="product">
@@ -133,15 +133,14 @@
                   <div class="product-info">
                       <h5 class="product-title">RS-X Forward History Unisex Sneakers</h5>
                       <p class="product-price">$729</p>
-                      <a class="product-btn" href="#">Buy Now</a>
+                      <a class="product-btn" href="cart page/index.html">Buy Now</a>
                   </div>
               </div>
           </div>
         </div>
       </div>
 
-      <hr>
-      <hr>
+      <hr style="color: black; margin-bottom: 60px;">
 
       <!-- footer -->
           <div id="main">
